# youtube-quickshot-dagster

./: .env.example  README.md  docker-compose.yaml  pyproject.toml
src/dagster_dev/: definitions.py
src/dagster_dev/defs/: job.py
src/dagster_dev/defs/assets/: my_asset.py
src/dagster_dev/defs/config/: load_env.py
src/dagster_dev/defs/ops/: extract.py  load_minio.py  load_postgres.py  transform.py
tests/: first_test.py
