[project]
name = "dagster_dev"
requires-python = ">=3.12"
version = "0.1.0"
dependencies = [
    "dagster",
    "dagster-duckdb>=0.26.13",
    "google-api-python-client>=2.169.0",
    "minio>=7.2.15",
    "pandas>=2.2.3",
    "psycopg[binary]>=3.2.7",
    "sqlalchemy>=2.0.40",
]

[project.entry-points]
"dagster_dg.plugin" = { dagster_dev = "dagster_dev.lib"}

[dependency-groups]
dev = [
    "dagster-webserver",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dagster_dev"


[tool.dg.project.python_environment]
active = true
